--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "firebase": "^7.11.0",
+    "firebase-admin": "^8.10.0",
     "global": "^4.4.0",
     "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
