--- a/package.json
+++ b/package.json
@@ -1,36 +1,30 @@
 {
-  "name": "backend",
+  "name": "betwin-backend",
   "version": "1.0.0",
-  "description": "Application for youths",
+  "description": "Soccer preduction",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
   "keywords": [
-    "survey cameroun",
-    "sondage cameroun"
+    "betwin prediction"
   ],
   "author": "kevin-it",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/storage": "^4.6.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "firebase": "^7.11.0",
-    "firebase-admin": "^8.10.0",
     "global": "^4.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
-    "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.15",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "socket.io": "^2.2.0",
     "uuid-v4": "^0.1.0"
   }
 }
