--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "firebase-admin": "^11.5.0",
     "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
