--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,15 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Install dependencies
-        run: |
-          if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
-          elif [ -e package-lock.json ]; then
-          npm ci
-          else
-          npm i
-          fi
+    - run: npm ci
     - run: npm run build --if-present
     - run: export GOOGLE_APPLICATION_CREDENTIALS=/home/ubuntu/service-account.json --update-env
     - run: export NODE_ENV=production pm2 restart betwin-backend --update-env
