--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: export NODE_ENV=production pm2 restart betwin-backend --update-env
+    - run: NODE_ENV=production pm2 restart betwin-backend --update-env
