--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
     "nodemon": "^2.0.15",
+    "redis": "^4.6.13",
     "request": "^2.88.0",
     "uuid-v4": "^0.1.0"
   }
