--- a/ansible/ec2_provision.yml
+++ b/ansible/ec2_provision.yml
@@ -24,7 +24,7 @@
         state: present
 
     - name: Download and add Node.js GPG key
-      shell: curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/trusted.gpg.d/nodesource.gpg
+      shell: curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/nodesource.gpg > /dev/null
       args:
         executable: /bin/bash
 
